@@ -10,11 +10,12 @@ Thai Nguyen
 
 ### Requirements
 1. Download JDK 19.00
+2. Have JavaFX downloaded, refer to https://openjfx.io/openjfx-docs/#install-javafx for installation
 
 ### Getting the code
 1. Download and open the zipped file or clone the repository Github to your local machine.
 2. Navigate to the directory where the files are stored using Command Prompt, Powershell, or any terminal.
-3. Type 'javac *.java' to compile all the java files
-4. To run the game, type 'java Deadwood X' replacing X with the number of players playing the game.
-5. Type 'help' to get a list of command while in the game.
-6. ENJOY!
+3. Type 'javac --module-path <PATH_TO_JAVAFX> --add-modules javafx.controls,javafx.media Deadwood.java' to compile where <PATH_TO_JAVAFX> is the path to the javafx lib folder.
+4. To run the game, type 'java --module-path <PATH_TO_JAVAFX> --add-modules javafx.controls,javafx.media Deadwood <X>' where X is the scale from 0.3 to 3, can omit.
+5. ENJOY!
+
